# heif-static-test

./: .gitignore  CMakeLists.txt  README.md  build.bat  main.cpp
